styles/globals.css
html,
body {
  font: 14px "Open Sans", sans-serif;
  min-height: 100vh;
}

* {
  box-sizing: border-box;
}

div hidden {
  display: none;
}

.btn {
  white-space: nowrap;
}

.danger {
  color: red;
  font-weight: bold;
}

.success {
  color: green;
  font-weight: bold;
}

.wrapper {
  width: 720px;
  padding: 20px;
}

.wrapper a {
  cursor: pointer;
}

.form-group {
  margin: 10px 0;
}

.form-group label {
  font-weight: bold;
  display: block;
  margin-bottom: 5px;
}

.form-check-input[type=checkbox] {
  margin-right: 5px;
}

.wrapper button {
  margin: 0 10px 0 0;
}

.wrapper input,
.wrapper select,
.wrapper textarea {
  width: 100%;
}

.navbar {
  margin: 0;
  padding: 0 10px;
}

.navbar .logo-col {
  margin: 0;
  padding: 0;
}

.login-logo-container {
  width: 100%;
  margin: 0;
  padding: 0 0 15px 0;
  text-align: center;
}

.login-logo {
  margin: 0 auto;
}

.login-title-container {
  width: 100%;
  margin: 0;
  padding: 0;
  text-align: center;
}

.page-header {
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
  box-shadow: none;
  padding: 5px 15px 5px 2px;
  margin: 0 0 15px 0;
  border: 0px !important;
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
  background-color: #EFEFEF;
  width: 100%;
}

.nav-header {
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
  box-shadow: none;
  padding: 0 20px;
  margin: 15px 10px 0 0;
  border: 0px !important;
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
}

.navbar-icon-image {
  margin: 10px 0 10px 15px;
}

.page-header .title-container {
  vertical-align: middle;
  line-height: 36px;
}

.page-header .title {
  margin: auto;
  text-transform: uppercase;
}

.control-container {
  text-align: right;
  padding: 0;
}

.control-container .action-button {
  float: right;
  margin: auto 10px;
  cursor: pointer;
  color: black;
}

.admin-tabs {
  width: 100%;
  gap: 0 !important;
}

.admin-seller-row {
  margin: 0 0 10px 0;
}

.admin-check-row {
  margin: 5px 0;
}

.admin-button-row {
  margin: 0 0 10px 10px;
}

.date-range-title {
  margin-right: 10px;
}

.seller-title {
  margin: 0 15px;
}

.inactive-check,
.deleted-check,
.revenue-check,
.service-fees-check {
  margin: 0 0 0 20px;
  float: left;
  width: 160px;
  white-space: nowrap;
}

.inactive-check div,
.deleted-check div,
.revenue-check div,
.service-fees-check div {
  float: left;
}

.inactive-check .form-check-input,
.deleted-check .form-check-input,
.revenue-check .form-check-input,
.service-fees-check .form-check-input {
  margin-right: 10px;
}

.admin-button-row button {
  width: 165px;
  margin: 10px;
}

.spinner-container {
  display: flex;
  justify-content: space-around;
  padding-top: 15px;
}

.widget-row {
  margin: 0 !important;
  padding: 0 !important;
  height: 100%;
}

.stat-block-container {
  padding: 15px;
  min-height: 265px;
  min-width: 265px;
}

.stat-block {
  padding: 15px;  
  background-color: #EFEFEF;
  border: 1px solid #dedede;
  border-radius: 4px;
  line-height: 14px;
  font-size: 14px;
  width: 100%;
  height: 100%;  
}

.stat-block svg {
  display: block;
  margin: 0 5px 10px 0;
}

.stat-block div {
  margin-bottom: 5px;
}

.stat-block div.second {
  margin-top: 25px;
}

.stat-block span {
  margin-top: 15px;
  display: table;
  font-weight: bold;
}

.stat-block .totalSpan {
  margin-top: 15px;
}

.results-container {
  padding: 15px 15px 15px 5px;
}

.resultsTable {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid black;
  margin: 15px 0 0 5px;
}

.resultsTable th,
.resultsTable td {
  border: 1px solid black;
  padding: 5px;
}

.resultsTable th.center {
  text-align: center;
}

.resultsTable td.pull-right {
  float: unset;
  text-align: right;
}

.resultsTable div.pull-right {
  text-align: right;
}

.resultsTable tr.event-inactive {
  color: red;
}

.resultsTable tr.event-deleted {
  color: maroon;
  font-weight: bold;
}

.resultsTable thead,
.resultsTable tfoot {
  font-weight: bold;
}

.resultsTable tfoot div {
  padding: 5px;
}

.resultsTable a,
.vipTable a {
  cursor: pointer;
  text-decoration: underline !important;
}

.resultsTable a:hover,
.vipTable a:hover {
  color: blue !important;
  text-decoration: none !important;
}

.chartColumn {
  padding: 10px 0 10px 25px;
}

.no-events {
  width: 100;
  text-align: center;
  font-size: 24px;
  padding-top: 25px;
}

.vipContainer {
  margin: 0;
  padding: 10px;
}

.vipDetailsTable {
  max-width: 360px;
  margin-bottom: 10px;
}

.vipDetailsTable tr {
  vertical-align: top;
}

.vipDetailsTable td {
  padding: 5px 10px;
  white-space: nowrap;
}

.vipDetailsTable .vipLabel {
  font-weight: bold;
  text-align: left;
}

.vipTitle {
  font-weight: bold;
}

.chart-total {
  margin-top: 5px;
  width: 425px;
  text-align: center;
}

.vipTable {
  margin: 25px 5px;
  width: 99%;
  border-collapse: collapse;
  border: 1px solid black;
}

.vipTable tr {
  vertical-align: top;
}

.vipTable th,
.vipTable td {
  border: 1px solid black;
  padding: 5px;
}

.vipTable th {
  background-color: lightgray;
  font-weight: bold;
}

.vipTable .inactive {
  color: red;
}

.vipTable .deleted {
  color: maroon;
  font-weight: bold;
}

.vipTable .refunded {
  color: blueviolet;
  font-weight: bold;
}

.custom-tooltip {
  border-radius: 5px;
  border: 2px solid red;
  background-color: white;
  padding: 10px;
}

.custom-tooltip .label {
  color: black;
  font-weight: bold;
}

/* MOBILE CSS */

.mobile-event-card-container {
  width: 100%;
  margin: 0;
  border: 0;
}

.mobile-event-card-container td {
  border: unset;
  width: 100%;
  text-align: center;
}

.mobile-event-card {
  text-align: left;
  margin: 0;
  border: 2px solid gray;
  padding: 15px;
}

.mobile-event-card .row {
  padding: 5px;
}

.mobile-event-card .ticket-type {
  margin-bottom: 10px;
}

.mobile-event-card button {
  margin: 5px 25px 5px 0;
}

/* MOBILE QUERIES */

/* Bootstrap xl */
@media (max-width: 1200px) {
  .stat-block-container {
    min-height: 200px;
    min-width: 200px;
  }

  .stat-block {
    font-size: 13px;
  }
}

/* Bootstrap lg */
@media (max-width: 992px) {
  .inactive-check,
  .deleted-check,
  .revenue-check,
  .service-fees-check {
    margin-bottom: 15px;
  }

  .admin-button {
    width: 150px;
    margin-top: 0;
  }
}

/* custom desktop/tablet width */
@media (max-width: 867px) {
  .control-container .date-range-title {
    display: none;
  }
}

/* Bootstrap md */
@media (max-width: 768px) {
  .wrapper {
    width: 368px;
  }

  .resultsTable, .widget-row {
    max-width: 100%;
  }

  .resultsTable th,
  .resultsTable td {
    padding: 2px;
  }

  .stat-block {
    font-size: 12px;
  }
}

/* Bootstrap sm */
@media (max-width: 576px) {
  .vipContainer {
    padding: 5px;
  }

  .results-container {
    margin: 0;
    padding: 10px;
  }

  .no-mobile {
    display: none;
  }

  .stat-block-container {
    padding: 10px;
    min-height: 150px;
    min-width: 150px;
  }

  .stat-block {
    padding: 10px;
    font-size: 10px;
  }

  .control-container {
    text-align: unset;
  }

  .results-col {
    padding: 0;
  }

  .resultsTable,
  .vipTable {
    margin: 0;
  }

  .inactive-check,
  .deleted-check,
  .revenue-check,
  .service-fees-check {
    margin: 0 20px 15px 0;
  }

  .resultsTable,
  .resultsTable tbody,
  .resultsTable th,
  .resultsTable td,
  .vipTable,
  .vipTable tbody,
  .vipTable th,
  .vipTable td {
    border: unset
  }

  .vipTable {
    margin-top: 0;
  }

  .resultsTable th,
  .resultsTable td,
  .vipTable th,
  .vipTable td {
    padding: 5px 0;
  }

  .admin-button-row button {
    font-size: 0.8rem;
  }
}

/* custom mobile width */
@media (max-width: 435px) {
  .no-mobile {
    display: none;
  }

  .control-container {
    text-align: unset;
  }

  .resultsCol {
    padding: 0;
  }
}


@media print {

  .no-print,
  .rs-nav-item,
  .rs-nav-bar {
    display: none !important;
  }
}

